--- a/portfolio/client/main.html
+++ b/portfolio/client/main.html
@@ -1,3 +1,8 @@
+<!--
+  File Developer: Peter Pak
+  Description: Base HTML for javascript components to fill
+-->
+
 <head>
   <title>Portfolio</title>
 </head>
