--- a/portfolio/client/main.html
+++ b/portfolio/client/main.html
@@ -1,6 +1,6 @@
 <!--
   File Developer: Peter Pak
-  Description: Base HTML for javascript components to fill
+  Description: Base HTML template for javascript components to use
 -->
 
 <head>
