Webpack Development Server
Commit adds Webpack development server so that JavaScript files can reload automatically once changed and compiled through Webpack

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
   File Developer: Peter Pak
-  Description: Base HTML file for Flask to implement JavaScript code
+  Description: Base HTML file for Webpack development server
 -->
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
@@ -10,6 +10,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script src="{{ url_for( 'static', filename = 'js/bundle.js' )}}"></script>
+    <script src="./bundle.js"></script>
   </body>
 </html>
