--- a/flask-javascript/index.html
+++ b/flask-javascript/index.html
@@ -6,7 +6,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Flask React</title>
+    <title>Development Server</title>
   </head>
   <body>
     <div id="root"></div>
